set input field font size to 16px to fix zoom on ios

--- a/src/assets/styles/MakePayment.css
+++ b/src/assets/styles/MakePayment.css
@@ -74,7 +74,7 @@ select {
   background-color: #ffffff12;
   border-radius: 3px;
   padding: 0 10px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   margin: 0.5rem 0;
 }
